--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/assets/css/index.css" rel="stylesheet">
+    <link href="index.css" rel="stylesheet">
     <link rel="icon" href="/assets/img/logos/favicon.png" type="image/x-icon">
-    <title>Code</title>
+    <title>ÉcoWorking</title>
 </head>
 <body>
     <header>
@@ -15,13 +15,13 @@
                 <img src="/assets/img/logos/logo.png" alt="logo">
                 <div class="logo-separator"></div>
                 <div class="logo-title">
-                    <span>E</span>co<span>W</span>orking <span>A</span>lsace
+                    <span>É</span>co<span>W</span>orking
                 </div>
             </a>
             <nav>
                 <ul class="menu">
                     <li>
-                        <span>Espaces d'Écoworking</span>
+                        <span class="menu-section">Espaces Écoworking</span>
                         <div class="globalmenu">
                             <div class="container">
                                 <div>
@@ -52,7 +52,7 @@
                         </div>
                     </li>
                     <li>
-                        <span>Admin</span>
+                        <span class="menu-section">Admin</span>
                         <div class="globalmenu">
                             <div class="container">
                                 <div>
@@ -75,6 +75,9 @@
                                 </div>
                             </div>
                         </div>
+                    </li>
+                    <li>
+                        <a href="#0">Lien</a>
                     </li>
                     <li>
                         <a class="connect" href="#0">Se connecter</a>
@@ -100,7 +103,60 @@
                 <span>></span>
             </button>
         </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
+        <div class="container">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam esse laboriosam quasi eligendi
+            culpa quia dicta aliquid, obcaecati necessitatibus similique aut, beatae et dolorum cumque nemo,
+            animi iusto perferendis possimus?
+        </div>
     </main>
+    <footer>
+
+    </footer>
 </body>
 <script src="/js/carousel/carousel.js"></script>
 </html>
