--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </li>
                 <!-- BOUTON SE SONNECTER -->
                 <li>
-                    <a class="button" href="#0">Se connecter</a>
+                    <a class="button" href="/pages/account/connect.html">Se connecter</a>
                 </li>
             </ul>
         </nav>  
@@ -115,21 +115,21 @@
                 <a class="presentation_city" href="#0">
                     <img src="/assets/img/index/str.jpg" alt="Strasbourg">
                 </a>
-                <h3>Strasbourg</h2>
+                <h3>Strasbourg</h3>
             </div>
             <!-- VILLE 2 -->
             <div>
                 <a class="presentation_city" href="#0">
                     <img src="/assets/img/index/mul.jpg" alt="Mulhouse">
                 </a>
-                <h3>Mulhouse</h2>
+                <h3>Mulhouse</h3>
             </div>
             <!-- VILLE 3 -->
             <div>
                 <a class="presentation_city" href="#0">
                     <img src="/assets/img/index/col.jpg" alt="Colmar">
                 </a>
-                <h3>Colmar</h2>
+                <h3>Colmar</h3>
             </div>
         </div>
     </section>
@@ -179,8 +179,8 @@
                         <div class="note-active"></div>
                         <div class="note-active"></div>
                         <div class="note-active"></div>
-                        <div class="note-active"></div>
-                        <div></div>
+                        <div class="note-empty"></div>
+                        <div class="note-empty"></div>
                     </div>
                     <div class="selection_place-comment">
                         <span>«</span>
@@ -205,19 +205,20 @@
                 <div class="selection_place-containt">
                     <img src="/assets/img/index/place3.jpg" alt="La Bulle Verte">
                     <div class="selection_place-note">
-                        <div class="note-active"></div>
-                        <div class="note-active"></div>
-                        <div class="note-active"></div>
-                        <div class="note-active"></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                        <div></div>
                         <div></div>
                     </div>
                     <div class="selection_place-comment">
-                        <span>«</span>
+                        <span></span>
                         <span class="selection_place-comment-text">
-                            Très joli lieu de coworking : bureaux spacieux, jardin,
-                            cuisine équipée avec bureaux nomades, super ambiance de travail !
+                            Nouveau...
+                            <!-- Très joli lieu de coworking : bureaux spacieux, jardin,
+                            cuisine équipée avec bureaux nomades, super ambiance de travail ! -->
                         </span>
-                        <span>»</span>                                
+                        <span></span>                                
                     </div>
                     <div class="selection_place-overlay">
                         <a class="button" href="#0">Ouvrir la fiche</a>
