--- a/pages/account/connect.html
+++ b/pages/account/connect.html
@@ -38,38 +38,33 @@
 </header>
 <main>
     <!---------------------------------------------------------------------------->
-    <!-- PRESENTATION -->
+    <!-- CONNEXION -->
     <!---------------------------------------------------------------------------->
     <section class="connect container">
-        <h1>Se Connecter</h1>
+        <!-- <h1>Se Connecter</h1> -->
         <div class="connect_grid">
-            <!-- CONNEXION -->
-            <div>
+            <!-- SIGN-IN -->
+            <div class="connect_grid-signin">
                 <h4>Identifiez-vous</h4>
                 <form class="connect_form" method="get" action="">
                     <div>
                         <label>Email</label>
-                        <input type="email" tabIndex="1" placeholder="" maxLength="50" />
+                        <input type="email" tabIndex="1" placeholder="" maxLength="50" autofocus />
                     </div>
                     <div>
                         <label>Mot de passe</label>
                         <input type="password" tabIndex="2" placeholder="" maxLength="50" />
                     </div>
-                    <a class="link" href="#0">Mot de passe oublié ?</a>
-                    <input class="button" tabIndex="3" type="submit" value="Valider" />
+                    <a class="link" href="#0"><span>></span>Mot de passe oublié ?</a>
+                    <input class="button" type="submit" value="Valider" />
                 </form>
             </div>
-            <!-- INSCRIPTION -->
-            <div>
-                <h4>Pas encore Écoworker ?</h4>
-                <p>
-                    En créant votre compte, vous pourrez :
-                    <ul>
-                        <li>Être informé(e) de tous nos bons plans</li>
-                        <li>Noter les espaces et laisser des commentaires</li>
-                        <li>Mémoriser vos espaces favoris</li>
-                    </ul>
-                </p>
+            <!-- SIGN-UP -->
+            <div class="connect_grid-signup">
+                <h4>Vous souhaitez devenir Écoworker ?</h4>
+                <div>
+                    <img src="/assets/img/logos/environnement.png">
+                </div>
                 <a class="button" href="#0">Créer un compte</a>
             </div>
         </div>
@@ -79,10 +74,10 @@
     <!---------------------------------------------------------------------------->
     <!-- BANDEAU PIED DE PAGE -->
     <!---------------------------------------------------------------------------->
-    <div class="footer_banner container">
+    <!-- <div class="footer_banner container">
         <img src="/assets/img/logos/logo.png" alt="logo">
         <span>© Stéphane Le Pajolec - 2024</span>
-    </div>
+    </div> -->
 </footer>
 </body>
 </html>
