--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <div>
                                 <span>Strasbourg</span>
                                 <ul class="bandeau_submenu">
-                                    <li><a href="#0">Green Place</a></li>
+                                    <li><a href="/pages/ecoworkings/green-place.html">Green Place</a></li>
                                     <li><a href="#0">Eco Working Strasbourg</a></li>
                                     <li><a href="#0">Assolidaire</a></li>
                                     <li><a href="#0">Le Comptoir du Rhin</a></li>
