--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/common/normalize.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/common/header.css">
     <!-- Feuille de style spécifique ------------------------------------->
-    <link rel="stylesheet" type="text/css" href="/assets/css/pages/search.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/pages/ecoworking.css">
     <link rel="icon" href="/assets/img/logos/favicon.png" type="image/x-icon">
     <title>ÉcoWorking</title>
 </head>
@@ -77,10 +77,10 @@
 </header>
 <main>
     <!---------------------------------------------------------------------------->
-    <!-- RECHERCHE -->
+    <!-- ECOWORKING -->
     <!---------------------------------------------------------------------------->
-    <section class="presentation container">
-        <h1>Centres d'ÉcoWorking</h1>
+    <section class="container">
+        <h1>Green Place</h1>
         <div class="filter">
             Filtres
         </div>
@@ -92,20 +92,7 @@
                 </a>
                 <h3>Strasbourg</h3>
             </div>
-            <!-- VILLE 2 -->
-            <div>
-                <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/mul.jpg" alt="Mulhouse">
-                </a>
-                <h3>Mulhouse</h3>
-            </div>
-            <!-- VILLE 3 -->
-            <div>
-                <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/col.jpg" alt="Colmar">
-                </a>
-                <h3>Colmar</h3>
-            </div>
+
         </div>
     </section>
 </main>
