--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                         <span>»</span>
                     </div>
                     <div class="selection_place-overlay">
-                        <a class="button" href="#0">Ouvrir la fiche</a>
+                        <a class="button" href="/pages/ecoworkings/green-place.html">Ouvrir la fiche</a>
                     </div>  
                 </div>
             </div>
