--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -79,20 +79,29 @@
     <!---------------------------------------------------------------------------->
     <!-- ECOWORKING -->
     <!---------------------------------------------------------------------------->
-    <section class="container">
-        <h1>Green Place</h1>
-        <div class="filter">
-            Filtres
-        </div>
-        <div class="presentation_cities">
-            <!-- VILLE 1 -->
-            <div>
-                <a class="presentation_city" href="#0">
-                    <img src="/assets/img/index/str.jpg" alt="Strasbourg">
-                </a>
-                <h3>Strasbourg</h3>
-            </div>
-
+    <section class="container ecoworking">
+        <div class="ecoworking_presentation">
+            <!-- DESCRIPTION -->
+             <div class="ecoworking_presentation-description">
+                <h1>Green Place</h1>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Dolores odio assumenda autem inventore architecto similique. 
+                    Quo, quis non eius quae numquam, ullam cumque commodi 
+                    mollitia iusto sed consectetur. Eveniet, magnam.
+                    Quo, quis non eius quae numquam, ullam cumque commodi 
+                    mollitia iusto sed consectetur. Eveniet, magnam.
+                </p>
+                <!-- <div class="ecoworking_address">
+                    <div>27 Place de la Libération</div>
+                    <div>Bâtiment A2 - 2ème Étage</div>
+                    <diV>67000 Strasbourg</diV>
+                </div>               -->
+             </div>
+            <!-- IMAGE -->
+             <div class="ecoworking_presentation-image">
+                <!-- <img src="/assets/img/index/place1.jpg" alt="Green Place"> -->
+             </div>
         </div>
     </section>
 </main>
