--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -81,28 +81,38 @@
     <!---------------------------------------------------------------------------->
     <section class="container ecoworking">
         <div class="ecoworking_presentation">
-            <!-- DESCRIPTION -->
-             <div class="ecoworking_presentation-description">
+            <!-- TITRE ET COORDONNÉES -->
+             <div class="ecoworking_presentation-titre">
                 <h1>Green Place</h1>
-                <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                    Dolores odio assumenda autem inventore architecto similique. 
-                    Quo, quis non eius quae numquam, ullam cumque commodi 
-                    mollitia iusto sed consectetur. Eveniet, magnam.
-                    Quo, quis non eius quae numquam, ullam cumque commodi 
-                    mollitia iusto sed consectetur. Eveniet, magnam.
-                </p>
-                <!-- <div class="ecoworking_address">
-                    <div>27 Place de la Libération</div>
-                    <div>Bâtiment A2 - 2ème Étage</div>
-                    <diV>67000 Strasbourg</diV>
-                </div>               -->
+                <div>
+                    <div class="ecoworking_coordonnees"> 
+                        <img src="/assets/img/icones/globe.png" alt="email">
+                        <span class="ecoworking_coordonnees-site"><a href="#">Site Web</a></span>
+                    </div>
+                    <div class="ecoworking_coordonnees"> 
+                        <img src="/assets/img/icones/appel.png" alt="téléphone">
+                        <span class="ecoworking_coordonnees-tel">05 01 02 03 04</span>                        
+                    </div>
+                    <div class="ecoworking_coordonnees"> 
+                        <img src="/assets/img/icones/email.png" alt="email">
+                        <span class="ecoworking_coordonnees-email">green-place@domaine.com</span>
+                    </div>
+                    <div class="ecoworking_coordonnees"> 
+                        <img src="/assets/img/icones/maison.png" alt="adresse">
+                        <div>
+                            <span class="ecoworking_coordonnees-rue">3 Rue de la Libération, Bâtiment C</span><br>
+                            <span class="ecoworking_coordonnees-ville">67000 Strasbourg</span>                            
+                        </div>
+                    </div>
+                </div>
              </div>
             <!-- IMAGE -->
              <div class="ecoworking_presentation-image">
-                <!-- <img src="/assets/img/index/place1.jpg" alt="Green Place"> -->
              </div>
         </div>
+
+
+
     </section>
 </main>
 <footer>
