--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/common/normalize.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/common/header.css">
     <!-- Feuille de style spécifique ------------------------------------->
-    <link rel="stylesheet" type="text/css" href="/assets/css/pages/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link rel="icon" href="/assets/img/logos/favicon.png" type="image/x-icon">
     <title>ÉcoWorking</title>
 </head>
@@ -32,7 +32,7 @@
             <ul class="bandeau_menu">
                 <!-- MENU DÉROULANT ESPACES -->
                 <li>
-                    <span class="bandeau_menu-libelle">Espaces</span>
+                    <span class="bandeau_menu-libelle">Espaces d'écoworking</span>
                     <div class="bandeau_menu-dropdown">
                         <div class="container">
                             <div>
@@ -62,10 +62,6 @@
                             </div>
                         </div>
                     </div>
-                </li>
-                <!-- MENU RECHERCHE -->
-                <li>
-                    <a class="bandeau_menu-link" href="/pages/ecoworkings/search.html">Recherche Avancée</a>
                 </li>
                 <!-- BOUTON SE SONNECTER -->
                 <li>
@@ -181,8 +177,8 @@
                         <div class="note-active"></div>
                         <div class="note-active"></div>
                         <div class="note-active"></div>
-                        <div class="note-empty"></div>
-                        <div class="note-empty"></div>
+                        <div></div>
+                        <div></div>
                     </div>
                     <div class="selection_place-comment">
                         <span>«</span>
