--- a/pages/account/connect.html
+++ b/pages/account/connect.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="/assets/css/common/normalize.css">
     <link rel="stylesheet" type="text/css" href="/assets/css/common/header.css">
     <!-- Feuille de style spécifique ------------------------------------->
-    <link rel="stylesheet" type="text/css" href="/assets/css/pages/account.css">
+    <link rel="stylesheet" type="text/css" href="account.css">
     <link rel="icon" href="/assets/img/logos/favicon.png" type="image/x-icon">
     <title>ÉcoWorking</title>
 </head>
