--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -116,14 +116,19 @@
         <div class="ecoworking_infos-equipement">
             <h4>Salles / Équipement</h4>
             <div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
-                <div>a</div>
+                <div><img src="/assets/img/icones/co-working.png" alt="">Espace ouvert</div>
+                <div><img src="/assets/img/icones/travailler-avec-un-ordinateur-portable.png" alt="">Bureaux individuels</div>
+                <div><img src="/assets/img/icones/reunion.png" alt="">Salles de réunion</div>
+                <div><img src="/assets/img/icones/bouclier.png" alt="email">Espace sécurisé</div>
+                <div><img src="/assets/img/icones/wifi-router.png" alt="">Wifi / Ethernet</div>
+                <div><img src="/assets/img/icones/imprimante.png" alt="">Impression / Scan</div>
+                <div><img src="/assets/img/icones/tasse-a-cafe.png" alt="">Espace détente</div>
+                <div><img src="/assets/img/icones/chef.png" alt="">Espace repas</div>
+                <div><img src="/assets/img/icones/desactive.png" alt="">Accès handicapé</div>
+                <div><img src="/assets/img/icones/parking.png" alt="email">Parking</div>
+                <div><img src="/assets/img/icones/velo.png" alt="email">Parking vélo</div>
+                <div><img src="/assets/img/icones/climatisation.png" alt="email">Climatisation</div>
+                
             </div>
         </div>
         <!-- INFOS PRATIQUES -->
