--- a/pages/ecoworkings/green-place.html
+++ b/pages/ecoworkings/green-place.html
@@ -86,7 +86,7 @@
                 <div class="etoile-active"></div>
                 <div class="etoile-active"></div>
             </div>
-            <div class="avis-lien"><a href="#">(12 avis)</a></div>
+            <div class="avis-lien"><a href="#">(6 avis)</a></div>
         </div>
 
         <div class="ecoworking_header-infos">
@@ -220,7 +220,8 @@
     
     <section class="ecoworking_avis container">
         <h4>Avis</h4>
-        <div class="ecoworking_avis-recapitulatif">
+        <div class="ecoworking_avis-moyenne">
+            <div class="libelle">Très Bien :</div>
             <div class="etoiles">
                 <div class="etoile-active"></div>
                 <div class="etoile-active"></div>
@@ -228,17 +229,17 @@
                 <div class="etoile-active"></div>
                 <div class="etoile-active"></div>       
             </div>
-            <div class="note_moyenne">
-                <span class="note_moyenne-nombre">4.8</span>
-                <span class="note_moyenne-libelle">(Très Bien)</span>
-            </div>
+            <div class="note">(4.7 / 5)</div>
         </div>
         <div class="ecoworking_avis-liste">
             <div class="avis">
                 <div class="avis-header">
-                    <div class="avis-header-date">
+                    <div class="avis-header-left">
                         <img src="/assets/img/ecoworking/utilisateur.png">
-
+                        <div>
+                            <span class="pseudo">Darl025</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
                     </div>
                     <div class="etoiles">
                         <div class="etoile-active"></div>
@@ -248,34 +249,129 @@
                         <div class="etoile-active"></div>
                     </div>
                 </div>
-                aaa
+                <p class="commentaire">
+                    Aenean venenatis tortor ut condimentum commodo. Phasellus rutrum odio dui, ut congue risus vehicula et.
+                    Quisque at nibh tortor. Suspendisse maximus arcu sit amet libero convallis, a vehicula lectus tempor.
+                    Curabitur auctor convallis turpis, non sagittis tellus pretium nec.
+                    Cras bibendum enim eget pulvinar condimentum. Proin volutpat hendrerit leo, et tempus orci tincidunt nec.
+                </p>
             </div>
             <div class="avis">
-                aaa
+                <div class="avis-header">
+                    <div class="avis-header-left">
+                        <img src="/assets/img/ecoworking/utilisateur.png">
+                        <div>
+                            <span class="pseudo">AlanDoo</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
+                    </div>
+                    <div class="etoiles">
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div></div>
+                    </div>
+                </div>
+                <p class="commentaire">
+                    Integer eleifend tortor eu lacus tristique, non maximus diam aliquam. Mauris eu lorem velit. 
+                    Donec fringilla, neque ut rhoncus efficitur, massa urna tincidunt nunc, eget gravida magna dui ac nunc. 
+                    Vivamus elementum consectetur enim non luctus. 
+                </p>
             </div>
             <div class="avis">
-                aaa
+                <div class="avis-header">
+                    <div class="avis-header-left">
+                        <img src="/assets/img/ecoworking/utilisateur.png">
+                        <div>
+                            <span class="pseudo">AliceMarvel</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
+                    </div>
+                    <div class="etoiles">
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                    </div>
+                </div>
+                <p class="commentaire">
+                    Donec fringilla, neque ut rhoncus efficitur, massa urna tincidunt nunc, eget gravida magna dui ac nunc. 
+                    Vivamus elementum consectetur enim non luctus. 
+                </p>
             </div>
             <div class="avis">
-                aaa
+                <div class="avis-header">
+                    <div class="avis-header-left">
+                        <img src="/assets/img/ecoworking/utilisateur.png">
+                        <div>
+                            <span class="pseudo">Luis2560</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
+                    </div>
+                    <div class="etoiles">
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                    </div>
+                </div>
+                <p class="commentaire">
+                    Proin in mattis urna. Praesent faucibus eu leo id tempus. 
+                    Fusce ornare arcu purus, nec faucibus velit rhoncus quis. 
+                    Integer commodo scelerisque neque, at feugiat leo interdum molestie. 
+                </p>
             </div>
             <div class="avis">
-                aaa
+                <div class="avis-header">
+                    <div class="avis-header-left">
+                        <img src="/assets/img/ecoworking/utilisateur.png">
+                        <div>
+                            <span class="pseudo">AstroMecano</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
+                    </div>
+                    <div class="etoiles">
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div></div>
+                    </div>
+                </div>
+                <p class="commentaire">
+                    Duis sit amet iaculis leo. Aenean eros mi, tristique ut justo porta, volutpat ultricies arcu. 
+                    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
+                    Morbi faucibus laoreet rhoncus. Morbi a ex sodales, tincidunt ex sed, laoreet quam. Duis fringilla, 
+                    massa vel varius tincidunt, leo metus dapibus purus, non rhoncus nisi purus vitae nunc. 
+                    Aenean hendrerit, nibh et auctor pellentesque, erat risus blandit leo, eget sollicitudin eros urna vitae ligula. 
+                    Aliquam vitae luctus nibh.
+                </p>
             </div>
             <div class="avis">
-                aaa
-            </div>
-            <div class="avis">
-                aaa
-            </div>
-            <div class="avis">
-                aaa
-            </div>
-            <div class="avis">
-                aaa
-            </div>
-            <div class="avis">
-                aaa
+                <div class="avis-header">
+                    <div class="avis-header-left">
+                        <img src="/assets/img/ecoworking/utilisateur.png">
+                        <div>
+                            <span class="pseudo">Donut2</span>
+                            <div class="date">25 Janvier 2024</div>
+                        </div>
+                    </div>
+                    <div class="etoiles">
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                        <div class="etoile-active"></div>
+                    </div>
+                </div>
+                <p class="commentaire">
+                    Ut laoreet sed mi sed pharetra. Morbi dapibus nulla vestibulum accumsan ultrices. 
+                    Suspendisse vestibulum orci sed turpis fermentum, vitae finibus mi tempor. 
+                    Aliquam imperdiet dolor vel ex congue scelerisque. 
+                </p>
             </div>
         </div>
     </section>
