--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
     <!-- PRESENTATION -->
     <!---------------------------------------------------------------------------->
     <section class="presentation container">
-        <h1>Bienvenue en Alsace ÉcoWorking</h1>
+        <h1>Bienvenue sur ÉcoWorking</h1>
+        <h2>Le site dédié aux espaces de coworking respectueux de l'environnement</h2>
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
             Dolores odio assumenda autem inventore architecto similique. 
